--- a/src/Views/InteractiveRebase.axaml
+++ b/src/Views/InteractiveRebase.axaml
@@ -88,8 +88,6 @@
                   <ColumnDefinition Width="108"/>
                   <ColumnDefinition Width="Auto" SharedSizeGroup="CommitHashColumn"/>
                   <ColumnDefinition Width="Auto" SharedSizeGroup="CommitTimeColumn"/>
-                  <ColumnDefinition Width="32"/>
-                  <ColumnDefinition Width="32"/>
                 </Grid.ColumnDefinitions>
 
                 <!-- Drag & Drop Anchor -->
@@ -191,7 +189,7 @@
                 <Grid Grid.Column="2" ColumnDefinitions="Auto,*" ClipToBounds="True">
                   <Button Grid.Column="0"
                           Classes="icon_button"
-                          Margin="0,0,8,0"
+                          Margin="0,0,6,0" Padding="0"
                           IsVisible="{Binding Action, Converter={x:Static c:InteractiveRebaseActionConverters.CanEditMessage}}"
                           Click="OnOpenCommitMessageEditor">
                     <Path Width="14" Height="14" Margin="0,4,0,0" Data="{StaticResource Icons.Edit}"/>
@@ -214,27 +212,15 @@
                 <!-- Commit SHA -->
                 <Border Grid.Column="5" ClipToBounds="True">
                   <TextBlock Classes="primary"
-                             Text="{Binding Commit.SHA, Converter={x:Static c:StringConverters.ToShortSHA}}"
-                             HorizontalAlignment="Center"/>
+                             Text="{Binding Commit.SHA, Converter={x:Static c:StringConverters.ToShortSHA}}"/>
                 </Border>
 
                 <!-- Commit Time -->
                 <Border Grid.Column="6">
                   <TextBlock Classes="primary"
                              Margin="16,0,8,0"
-                             Text="{Binding Commit.CommitterTimeStr}"
-                             HorizontalAlignment="Center"/>
+                             Text="{Binding Commit.CommitterTimeStr}"/>
                 </Border>
-
-                <!-- MoveUp Button -->
-                <Button Grid.Column="7" Classes="icon_button" Click="OnMoveItemUp" ToolTip.Tip="Alt+Up">
-                  <Path Width="14" Height="14" Margin="0,4,0,0" Data="{StaticResource Icons.Up}"/>
-                </Button>
-
-                <!-- MoveDown Button -->
-                <Button Grid.Column="8" Classes="icon_button" Click="OnMoveItemDown" ToolTip.Tip="Alt+Down">
-                  <Path Width="14" Height="14" Margin="0,4,0,0" Data="{StaticResource Icons.Down}"/>
-                </Button>
               </Grid>
             </DataTemplate>
           </v:InteractiveRebaseListBox.ItemTemplate>
