--- a/src/Views/Preferences.axaml
+++ b/src/Views/Preferences.axaml
@@ -600,7 +600,7 @@
                           Classes="icon_button"
                           Width="28" Height="28"
                           Click="OnRemoveSelectedCustomAction">
-                    <Path Width="14" Height="14" Data="{StaticResource Icons.Window.Minimize}"/>
+                    <Path Width="14" Height="14" Data="{StaticResource Icons.Minus}"/>
                   </Button>
                   <Button Grid.Column="3"
                           Classes="icon_button"
@@ -721,7 +721,7 @@
                   <Rectangle Width="1" Fill="{DynamicResource Brush.Border2}" HorizontalAlignment="Left" VerticalAlignment="Stretch"/>
 
                   <Button Classes="icon_button" Click="OnRemoveSelectedOpenAIService">
-                    <Path Width="14" Height="14" Data="{StaticResource Icons.Window.Minimize}"/>
+                    <Path Width="14" Height="14" Data="{StaticResource Icons.Minus}"/>
                   </Button>
 
                   <Rectangle Width="1" Fill="{DynamicResource Brush.Border2}" HorizontalAlignment="Left" VerticalAlignment="Stretch"/>
