--- a/src/Views/ScanRepositories.axaml
+++ b/src/Views/ScanRepositories.axaml
@@ -2,6 +2,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:m="using:SourceGit.Models"
              xmlns:vm="using:SourceGit.ViewModels"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:Class="SourceGit.Views.ScanRepositories"
@@ -10,16 +11,33 @@
     <TextBlock FontSize="18"
                Classes="bold"
                Text="{DynamicResource Text.ScanRepositories}"/>
-    <Grid Margin="0,16,0,0" RowDefinitions="32" ColumnDefinitions="130,*">
+    <Grid Margin="0,16,0,0" RowDefinitions="32" ColumnDefinitions="120,*">
       <TextBlock Grid.Row="0" Grid.Column="0"
                  HorizontalAlignment="Right" VerticalAlignment="Center"
                  Margin="0,0,8,0"
                  Text="{DynamicResource Text.ScanRepositories.RootDir}"/>
+      <ComboBox Grid.Row="0" Grid.Column="1"
+                Height="28" Padding="4,0"
+                VerticalAlignment="Center" HorizontalAlignment="Stretch"
+                ItemsSource="{Binding ScanDirs, Mode=OneWay}"
+                SelectedItem="{Binding Selected, Mode=TwoWay}">
+        <ComboBox.ItemTemplate>
+          <DataTemplate DataType="m:ScanDir">
+            <Grid ColumnDefinitions="20,*,Auto">
+              <Path Grid.Column="0"
+                    Width="12" Height="12"
+                    Data="{StaticResource Icons.Folder}"
+                    Fill="{DynamicResource Brush.FG1}"/>
 
-      <Grid Grid.Row="0" Grid.Column="1" ColumnDefinitions="Auto,*">
-        <Path Grid.Column="0" Width="14" Height="14" Margin="0,4,0,0" Data="{StaticResource Icons.Folder}"/>
-        <TextBlock Grid.Column="1" VerticalAlignment="Center" Text="{Binding RootDir}" Margin="4,0,0,0" TextTrimming="CharacterEllipsis"/>
-      </Grid>
+              <TextBlock Grid.Column="1" Margin="4,0" Text="{Binding Path}" VerticalAlignment="Center"/>
+
+              <Border Grid.Column="2" Height="16" Background="Green" CornerRadius="8" VerticalAlignment="Center">
+                <TextBlock Classes="primary" Text="{Binding Desc}" Margin="8,0" FontSize="10" Foreground="White"/>
+              </Border>
+            </Grid>
+          </DataTemplate>
+        </ComboBox.ItemTemplate>
+      </ComboBox>
     </Grid>
   </StackPanel>
 </UserControl>
