--- a/src/Views/ExecuteCustomAction.axaml
+++ b/src/Views/ExecuteCustomAction.axaml
@@ -9,11 +9,81 @@
   <StackPanel Orientation="Vertical" Margin="8,0">
     <TextBlock FontSize="18"
                Classes="bold"
-               Text="{DynamicResource Text.ExecuteCustomAction}"/>
-    <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,16,0,0">
-      <TextBlock Text="{DynamicResource Text.ExecuteCustomAction.Name}"/>
-      <Path Width="14" Height="14" Margin="8,0,0,0" Data="{StaticResource Icons.Action}"/>
-      <TextBlock Text="{Binding CustomAction.Name}" Margin="8,0,0,0"/>
-    </StackPanel>
+               Text="{Binding CustomAction.Name}"/>
+
+    <Grid Margin="0,16,0,0" IsVisible="{Binding IsSimpleMode}">
+      <TextBlock Text="{DynamicResource Text.ExecuteCustomAction.SimpleWait}"
+                 HorizontalAlignment="Center"/>
+    </Grid>
+
+    <ListBox Margin="0,16,0,0"
+             IsVisible="{Binding !IsSimpleMode}"
+             ItemsSource="{Binding ControlParameters, Mode=OneWay}">
+      <ListBox.Styles>
+        <Style Selector="ListBoxItem">
+          <Setter Property="Height" Value="32"/>
+          <Setter Property="Margin" Value="0"/>
+          <Setter Property="Padding" Value="0"/>
+          <Setter Property="BorderThickness" Value="0"/>
+        </Style>
+        <Style Selector="ListBoxItem:pointerover /template/ ContentPresenter#PART_ContentPresenter, ListBoxItem:selected /template/ ContentPresenter#PART_ContentPresenter">
+          <Setter Property="Background" Value="Transparent"/>
+        </Style>
+      </ListBox.Styles>
+
+      <ListBox.ItemsPanel>
+        <ItemsPanelTemplate>
+          <StackPanel Orientation="Vertical"/>
+        </ItemsPanelTemplate>
+      </ListBox.ItemsPanel>
+      
+      <ListBox.DataTemplates>
+        <DataTemplate DataType="vm:CustomActionControlTextBox">
+          <Grid ColumnDefinitions="120,*">
+            <TextBlock Grid.Column="0"
+                       Text="{Binding Label}"
+                       HorizontalAlignment="Right" VerticalAlignment="Center"
+                       Margin="0,0,8,0"/>
+            
+            <TextBox Grid.Column="1"
+                     Height="28"
+                     VerticalAlignment="Center"
+                     CornerRadius="3"
+                     Watermark="{Binding Placeholder, Mode=OneWay}"
+                     Text="{Binding Text, Mode=TwoWay}"/>
+          </Grid>
+        </DataTemplate>
+
+        <DataTemplate DataType="vm:CustomActionControlCheckBox">
+          <Grid ColumnDefinitions="120,*">
+            <CheckBox Grid.Column="1"
+                      Content="{Binding Label}"
+                      ToolTip.Tip="{Binding ToolTip, Mode=OneWay}"
+                      IsChecked="{Binding IsChecked, Mode=TwoWay}"/>
+          </Grid>
+        </DataTemplate>
+
+        <DataTemplate DataType="vm:CustomActionControlPathSelector">
+          <Grid ColumnDefinitions="120,*">
+            <TextBlock Grid.Column="0"
+                       Text="{Binding Label}"
+                       HorizontalAlignment="Right" VerticalAlignment="Center"
+                       Margin="0,0,8,0"/>
+
+            <TextBox Grid.Column="1"
+                     Height="28"
+                     CornerRadius="3"
+                     Watermark="{Binding Placeholder, Mode=OneWay}"
+                     Text="{Binding Path, Mode=TwoWay}">
+              <TextBox.InnerRightContent>
+                <Button Classes="icon_button" Width="30" Height="30" Click="SelectPath">
+                  <Path Data="{StaticResource Icons.Folder.Open}" Fill="{DynamicResource Brush.FG1}"/>
+                </Button>
+              </TextBox.InnerRightContent>
+            </TextBox>
+          </Grid>
+        </DataTemplate>
+      </ListBox.DataTemplates>
+    </ListBox>
   </StackPanel>
 </UserControl>
