--- a/src/Views/ConfigureCustomActionControls.axaml
+++ b/src/Views/ConfigureCustomActionControls.axaml
@@ -38,7 +38,7 @@
     </Grid>
 
     <!-- Body -->
-    <Grid Grid.Row="1" ColumnDefinitions="200,*" Height="340" Margin="8,8,8,16">
+    <Grid Grid.Row="1" ColumnDefinitions="200,*" MinHeight="340" Margin="8,8,8,16">
       <Border Grid.Column="0"
               BorderThickness="1" BorderBrush="{DynamicResource Brush.Border2}"
               Background="{DynamicResource Brush.Contents}">
@@ -138,8 +138,11 @@
               <TextBox Margin="0,4,0,0"
                        CornerRadius="3"
                        Height="28"
-                       Text="{Binding Description, Mode=TwoWay}"
-                       Watermark="{DynamicResource Text.ConfigureCustomActionControls.Description.Placeholder}"/>
+                       Text="{Binding Description, Mode=TwoWay}"/>
+              <TextBlock Margin="0,2,0,0"
+                         TextWrapping="Wrap"
+                         Text="{DynamicResource Text.ConfigureCustomActionControls.Description.Tip}"
+                         Foreground="{DynamicResource Brush.FG2}"/>
 
               <!-- Default value -->
               <TextBlock Margin="0,12,0,0" Text="{DynamicResource Text.ConfigureCustomActionControls.DefaultValue}"/>
@@ -170,7 +173,12 @@
                        CornerRadius="3"
                        Height="28"
                        Text="{Binding StringValue, Mode=TwoWay}"
-                       IsVisible="{Binding Type, Converter={x:Static ObjectConverters.Equal}, ConverterParameter={x:Static m:CustomActionControlType.CheckBox}}"/>              
+                       IsVisible="{Binding Type, Converter={x:Static ObjectConverters.Equal}, ConverterParameter={x:Static m:CustomActionControlType.CheckBox}}"/>
+              <TextBlock Margin="0,2,0,0"
+                         TextWrapping="Wrap"
+                         Text="{DynamicResource Text.ConfigureCustomActionControls.CheckedValue.Tip}"
+                         IsVisible="{Binding Type, Converter={x:Static ObjectConverters.Equal}, ConverterParameter={x:Static m:CustomActionControlType.CheckBox}}"
+                         Foreground="{DynamicResource Brush.FG2}"/>
             </StackPanel>
           </DataTemplate>
         </ContentControl.DataTemplates>
