--- a/src/Views/Confirm.axaml
+++ b/src/Views/Confirm.axaml
@@ -5,8 +5,8 @@
                     xmlns:v="using:SourceGit.Views"
                     xmlns:vm="using:SourceGit.ViewModels"
                     mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-                    x:Class="SourceGit.Views.ConfirmCommit"
-                    x:DataType="vm:ConfirmCommit"
+                    x:Class="SourceGit.Views.Confirm"
+                    x:DataType="vm:Confirm"
                     x:Name="ThisControl"
                     Icon="/App.ico"
                     Title="{DynamicResource Text.Warn}"
