feature: remember main window position (#1315)
Signed-off-by: leo <longshuang@msn.cn>

--- a/src/Views/Launcher.axaml
+++ b/src/Views/Launcher.axaml
@@ -11,8 +11,7 @@
                     x:Name="ThisControl"
                     Icon="/App.ico"
                     Title="{Binding Title}"
-                    MinWidth="1024" MinHeight="600"
-                    WindowStartupLocation="CenterScreen">
+                    MinWidth="1024" MinHeight="600">
   <Grid>
     <Grid.RowDefinitions>
       <RowDefinition Height="{Binding #ThisControl.CaptionHeight}"/>
